--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "clientjs": "^0.2.1",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
