--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "axios": "^0.27.2",
     "clientjs": "^0.2.1",
     "next": "12.2.2",
